Tue Dec 21 23:33:06 1999  Loic Dachary  <loic@ceic.com>

	* htdoc/attrs.html,cf_by*.html: regenerate to include 
	  wordlist_wordkey_description attribute
	
	* htcommon/Makefile.am: Add AM_LFLAGS = -L and AM_YFLAGS = -l to
	  prevent #line generation because it confuses the dependencies
	  generator of GCC if configure run out of source tree.

	* configure.in: remove --with-key option. Not needed since
	  word description now dynamic. Destroyed WordKey.h if
	  specified.

	* htword/Makefile.am: remove commented lines for WordKey.h
	  generation.

Tue Dec 21 18:18:01 1999  Marcel Bosc  <bosc@ceic.com>

	* htword: added code for benchmarking

Mon Dec 20 17:59:15 1999  Marcel Bosc  <bosc@ceic.com>

	* WordKey: Made the key structure dynamic: Changing the
	key structure used to imply recompiling the htword library.
	This should not change anything in htdig.

	* WordKey: numerical key fields are stored in an array of unsigned
	ints instead of compile-time defined pools.

	* WordKey.h: WordKey now needs copy opreators. Setbits are stored
	in sort order (used to be in encoding order)

	* htword: word_key_info is now a pointer, had to change all references
	
	* word.cc: Rewrote wordkey test for new dynamically
	set key structure. The test randomly creates key structures
	and tests them.

	* test: adapted test files (simplifies things a lot)
	
1999-12-21  Toivo Pedaste  <toivo@ucs.uwa.edu.au>

	* htlib/Dictionary.cc: Fix memory leak when destroying dictionary

	* htlib/StringList.cc, htdig/Retriever.cc: Fix memory leak, not
	the most elegent way but I'm not sure about the exact semantics
	of StringList

Mon Dec 20 21:59:03 1999  Loic Dachary  <loic@ceic.com>

	* htdb/{Makefile.am,err.c,getlong.c}: Fix mistake: err.c and
	  getlong.c contain C functions (declared in clib_ext) and 
	  must be C compiled otherwise the prototype won't fit. Checking
	  db Makefiles, getlong.c and err.c are added to the list of objects